# MedViT

./: README.md  VitLightning.py  alt_contrastive_train.py  alt_eval.py  brian_eval.py  brian_requirements.txt  callbacks.py  contrastive_train.py  my_utils.py  pyproject.toml  train.py  utils.py
CustomDataset/: main.py
callbacks/: flops_callback.py  knn_callback.py
configs/: dummy_lambda_train_config.yaml  lambda_train_config.yaml
scripts/: alt_eval.sh  scratch_train_lambda.sh  train_lambda.sh
train/: alt_contrastive_train.py  contrastive_train.py  knn_callback.py
